--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -203,6 +203,9 @@ body{
 }
 .player-name#trade{
   text-align: center;
+  margin-top: 2%;
+  padding-top: 2%;
+  font-size: 20px;
 }
 
 .rankings-title{
@@ -226,7 +229,8 @@ body{
   color: gold;
   text-align: center;
   margin-top: 5%;
-  font-size: 25px;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 40px;
   font-weight: 600;
 }
 
@@ -281,8 +285,8 @@ body{
   background: seagreen;
 }
 .reveal-btn-img{
-  height: 35px;
-  width: 35px;
+  height: 45px;
+  width: 45px;
 }
 .design-lines{
   position: absolute;
@@ -354,4 +358,39 @@ body{
   margin: 30% 0 0 78%;
   height: 20px;
   border-radius: 5%;;
+}
+.design-lines#buy-one{
+  width: 20%;
+  margin-top: -1%;
+  height: 1px;
+  transition: .3s ease-in-out;
+}
+.design-lines#buy-two{
+  width: 20%;
+  margin-top: -1%;
+  margin-left: 80%;
+  height: 1px;
+  transition: .3s ease-in-out;
+}
+.design-lines#sell-one{;
+  width: 20%;
+  margin-top: -1%;
+  height: 1px;
+  transition: .3s ease-in-out;
+}
+.design-lines#sell-two{;
+  width: 20%;
+  margin-top: -1%;
+  margin-left: 80%;
+  height: 1px;
+  transition: .3s ease-in-out;
+}
+
+.buy-section:hover .design-lines#buy-one, .sell-section:hover .design-lines#sell-one{
+  width: 30%;
+}
+
+.buy-section:hover .design-lines#buy-two, .sell-section:hover .design-lines#sell-two{
+  width: 30%;
+  margin-left: 70%;
 }
