--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -7,7 +7,7 @@
   display: flex;
 }
 .bio-line#first{
-  border: 5px solid #e4e4e4;
+  border: 4px solid #ffffff;
   position: absolute;
   width: 333px;
   margin: 11% 0% 0% -1%;
@@ -17,7 +17,7 @@
 }
 
 .bio-line#second{
-  border: 5px solid #e4e4e4;
+  border: 4px solid #ffffff;
   position: absolute;
   width: 333px;
   margin: 17% 0% 0% -1%;
@@ -29,7 +29,7 @@
 .bio-logo{
   height: 285px;
   width: 285px;
-  border: 6px solid #e4e4e4;
+  border: 4px solid #e4e4e4;
   border-radius: 100%;
   margin-left: 17%;
   margin-top: 3%;
