--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -92,6 +92,7 @@ body{
   background-color: white;
   width: 100%;
   clip-path: polygon(50% 0%, 93% 0, 96% 36%, 100% 100%, 0 100%, 4% 36%, 7% 0);
+  border-bottom: 5px solid gold;
 }
 .ff-section-title#greenbg{
   color: white;
@@ -206,6 +207,7 @@ body{
   margin-top: 2%;
   padding-top: 2%;
   font-size: 20px;
+  text-shadow: 1px 1px 1px rgba(0,0,0,.35);
 }
 
 .rankings-title{
@@ -228,10 +230,10 @@ body{
 .trade-title{
   color: gold;
   text-align: center;
-  margin-top: 5%;
+  margin-top: 3%;
   font-family: 'Satisfy', sans-serif;
   font-size: 40px;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .buy-section{
@@ -261,6 +263,10 @@ body{
   color: gold;
   font-weight: 600;
   text-shadow: 1px 1px 1px rgba(0,0,0,.55);
+  background: seagreen;
+}
+.ff-week-desc#greenbg{
+  background: white;
 }
 .ff-logo{
   position: absolute;
@@ -294,6 +300,7 @@ body{
   border-color: seagreen;
   width: 100%;
   height: 5px;
+  transition: .3s ease-in-out;
 }
 
 .design-lines#first{
@@ -319,42 +326,42 @@ body{
 }
 .design-lines#waiver1{
   transform: rotate(90deg);
-  width: 10%;
+  width: 7%;
   height: 20px;
   margin: 30% 0 0 13%;
   border-radius: 5%;;
 }
 .design-lines#waiver2{
   transform: rotate(90deg);
-  width: 14%;
+  width: 12%;
   height: 20px;
   margin: 30% 0 0 23%;
   border-radius: 5%;;
 }
 .design-lines#waiver3{
   transform: rotate(90deg);
-  width: 5%;
+  width: 4%;
   height: 20px;
-  margin: 31% 0 0 40%;
+  margin: 32% 0 0 40%;
   border-radius: 5%;;
 }
 .design-lines#waiver4{
   transform: rotate(90deg);
-  width: 8%;
+  width: 6%;
   height: 20px;
-  margin: 30% 0 0 53%;
+  margin: 31% 0 0 53%;
   border-radius: 5%;;
 }
 .design-lines#waiver5{
   transform: rotate(90deg);
-  width: 12%;
+  width: 10%;
   height: 20px;
   margin: 30% 0 0 63%;
   border-radius: 5%;;
 }
 .design-lines#waiver6{
   transform: rotate(90deg);
-  width: 13%;
+  width: 10%;
   margin: 30% 0 0 78%;
   height: 20px;
   border-radius: 5%;;
@@ -362,27 +369,27 @@ body{
 .design-lines#buy-one{
   width: 20%;
   margin-top: -1%;
-  height: 1px;
+  height: 2px;
   transition: .3s ease-in-out;
 }
 .design-lines#buy-two{
   width: 20%;
   margin-top: -1%;
   margin-left: 80%;
-  height: 1px;
+  height: 2px;
   transition: .3s ease-in-out;
 }
 .design-lines#sell-one{;
   width: 20%;
   margin-top: -1%;
-  height: 1px;
+  height: 2px;
   transition: .3s ease-in-out;
 }
 .design-lines#sell-two{;
   width: 20%;
   margin-top: -1%;
   margin-left: 80%;
-  height: 1px;
+  height: 2px;
   transition: .3s ease-in-out;
 }
 
