--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -93,6 +93,7 @@ body{
   width: 100%;
   clip-path: polygon(50% 0%, 93% 0, 96% 36%, 100% 100%, 0 100%, 4% 36%, 7% 0);
   border-bottom: 6px solid gold;
+  overflow: hidden;
 }
 .ff-section-title#greenbg{
   color: white;
@@ -122,7 +123,7 @@ body{
   border: 3px solid white;
   height: 300px;
   width: 19%;
-  margin-top: 0.5%;
+  margin-top: 5.5%;
   padding: 2%;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
@@ -359,4 +360,12 @@ body{
 .buy-section:hover .design-lines#buy-two, .sell-section:hover .design-lines#sell-two{
   width: 30%;
   margin-left: 70%;
+}
+.bg-football-img{
+  position: absolute;
+  height: 300px;
+  width: 300px;
+  margin-left: 3%;
+  margin-top: -3%;
+  transform: rotate(-45deg);
 }
