--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -10,7 +10,7 @@ body{
   clip-path: polygon(51% 0, 100% 0, 100% 100%, 50% 80%, 0 100%, 0 0);
 }
 .ff-title{
-  color: seagreen;
+  color: #e8b923;
   text-align: left;
   padding-top: 7%;
   margin-left: 25%;
