--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -26,7 +26,7 @@ body{
 }
 .luck{
   font-family: 'Satisfy', sans-serif;
-  color: gold;
+  color: #e8b923;
   font-weight: 600;
 }
 
@@ -92,7 +92,7 @@ body{
   background-color: white;
   width: 100%;
   clip-path: polygon(50% 0%, 93% 0, 96% 36%, 100% 100%, 0 100%, 4% 36%, 7% 0);
-  border-bottom: 6px solid gold;
+  border-bottom: 6px solid #e8b923;
   overflow: hidden;
 }
 .ff-section-title#greenbg{
@@ -191,8 +191,7 @@ body{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 #rank{
-  color: gold;
-  text-shadow: 1px 1px 1px rgba(0,0,0,.45);
+  color: #e8b923;
   font-size: 20px;
   font-weight: 600;
   padding-right: 4%;
@@ -229,7 +228,7 @@ body{
   text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 .trade-title{
-  color: gold;
+  color: #e8b923;
   text-align: center;
   margin-top: 3%;
   font-family: 'Satisfy', sans-serif;
