minor changes throughout -styles and small tweaks nothing major of note

--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -73,6 +73,7 @@
   transition: .35s ease-in-out;
   padding: .4%;
   cursor: alias;
+  color: #e8b923;
 }
 #career:hover{
   transition: scale(1.1);
