--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -27,7 +27,7 @@ body{
 .luck{
   font-family: 'Satisfy', sans-serif;
   color: #e8b923;
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .ff-intro-box{
@@ -86,6 +86,8 @@ body{
   background-color: seagreen;
   width: 100%;
   clip-path: polygon(50% 0%, 100% 0, 96% 64%, 93% 100%, 7% 100%, 4% 64%, 0 0);
+  border-top: 15px solid #e8b923;
+  border-bottom: 15px solid #e8b923;
 }
 .ff-daily-section{
   height: 650px;
@@ -108,7 +110,7 @@ body{
 .ff-section-title#whitebg{
   color: seagreen;
   text-align: center;
-  padding-top: 3%;
+  padding-top: 1%;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
   font-size: 56px;
@@ -123,7 +125,7 @@ body{
   border: 3px solid white;
   height: 300px;
   width: 19%;
-  margin-top: 5.5%;
+  margin-top: 7%;
   padding: 2%;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.3);
 }
@@ -198,7 +200,7 @@ body{
 }
 .player-name:hover{
   color: seagreen;
-  background: rgba(0,0,0,.05);
+  background: rgba(0,0,0,.075);
   cursor: crosshair;
   border-radius: 3%;
 }
@@ -234,6 +236,7 @@ body{
   font-family: 'Satisfy', sans-serif;
   font-size: 40px;
   font-weight: 700;
+  
 }
 
 .buy-section{
@@ -245,6 +248,7 @@ body{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   background: white;
   border-radius: 1%;
+  opacity: .95;
 }
 .sell-section{
   position: absolute;
@@ -255,7 +259,12 @@ body{
   box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
   background: white;
   border-radius: 1%;
+  opacity: .95;
 }
+.buy-section:hover, .sell-section:hover{
+  opacity: 1;
+}
+
 .ff-week-desc{
   text-align: center;
   margin-top: 1%;
@@ -263,15 +272,15 @@ body{
   color: gold;
   font-weight: 600;
   text-shadow: 1px 1px 1px rgba(0,0,0,.55);
-  background: seagreen;
+  background: rgba(46,139,87,.90);
 }
 .ff-week-desc#greenbg{
-  background: white;
+  background: rgba(255,255,255,.90);
 }
 .ff-logo{
   position: absolute;
-  height: 85px;
-  width: 105px;
+  height: 95px;
+  width: 120px;
   margin: 1.5% 0% 0 47%;
 }
 .rb-names, .wr-names, .qb-names, .te-names{
@@ -328,27 +337,27 @@ body{
 .design-lines#buy-one{
   width: 20%;
   margin-top: -1%;
-  height: 2px;
+  height: 5px;
   transition: .3s ease-in-out;
 }
 .design-lines#buy-two{
   width: 20%;
   margin-top: -1%;
   margin-left: 80%;
-  height: 2px;
+  height: 5px;
   transition: .3s ease-in-out;
 }
 .design-lines#sell-one{;
   width: 20%;
   margin-top: -1%;
-  height: 2px;
+  height: 5px;
   transition: .3s ease-in-out;
 }
 .design-lines#sell-two{;
   width: 20%;
   margin-top: -1%;
   margin-left: 80%;
-  height: 2px;
+  height: 5px;
   transition: .3s ease-in-out;
 }
 
