bet of the day -- update Browns win 6-3 on the year since beginning of august

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -4,7 +4,8 @@
   background-attachment: fixed;
   background-image: url('https://images.pexels.com/photos/1282315/pexels-photo-1282315.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
 }
-.title#art{
+.
+title#art{
   color: seagreen;
   text-align: left;
   padding-top: 1%;
