--- a/src/components/WebDesign/index.css
+++ b/src/components/WebDesign/index.css
@@ -17,7 +17,7 @@
   font-size: 42px;
   text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
 }
-.title-desc{
+.title-desc-design{
   color: white;
   text-align: center;
 }
