--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -4,8 +4,7 @@
   background-attachment: fixed;
   background-image: url('https://images.pexels.com/photos/1282315/pexels-photo-1282315.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
 }
-.
-title#art{
+.title#art{
   color: seagreen;
   text-align: left;
   padding-top: 1%;
@@ -28,10 +27,9 @@ title#art{
 }
 .art-piece{
 
-  width: 22%;
+  width: 22.5%;
   margin-left: 2%;
-  border-left: 5px solid whitesmoke;
-  border-bottom: 5px solid whitesmoke;
+
   background: #D4af37;
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
@@ -44,31 +42,29 @@ title#art{
 
 #art-img{
   width: 100%;
-  height: 235px;
+  height: 210px;
   transition: .55s ease-in-out;
   cursor: grab;
-  opacity: .35;
+  opacity: 1;
+  border: 5px solid whitesmoke;
 }
 
 #art-img:hover{
-  transform: scale(1.25);
-  opacity: 1;
-  border-right: 5px solid whitesmoke;
-  border-top: 5px solid whitesmoke;
+  transform: scale(1.15);
+  border: 5px solid #ffffff;
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
 #art-img2{
   width: 100%;
-  height: 225px;
-  transition: .25s ease-in-out;
+  height: 215px;
+  transition: .55s ease-in-out;
   cursor: grab;
-  opacity: .35;
+  border: 5px solid #ffffff;
+  opacity: 1;
 }
 
 #art-img2:hover{
   transform: scale(1.15);
-  opacity: 1;
-  border-right: 5px solid whitesmoke;
-  border-top: 5px solid whitesmoke;
+  border: 5px solid whitesmoke;
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
