--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -2,7 +2,7 @@
   height: 800px;
   background-size: 100% 100%;
   background-attachment: fixed;
-  background-image: url('https://images.pexels.com/photos/1282315/pexels-photo-1282315.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+  background-image: url('https://i.ibb.co/jgcPShJ/background-carpentry-construction-326333.jpg');
 }
 .title#art{
   color: seagreen;
@@ -11,22 +11,21 @@
   margin-left: 40%;
   font-weight: bolder;
   font-family: 'Satisfy', sans-serif;
-  font-size: 60px;
-  text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
+  font-size: 72px;
+  text-shadow: 4px 3px 0px #49230E, 9px 8px 0px rgba(0,0,0,0.75);
 }
 
 .gallery-container{
   display: flex;
-  margin: 2% auto;
+  margin: 5% auto;
   width: 100%;
 }
 .gallery-container2{
   display: flex;
-  margin: 1% auto;
+  margin: 5% auto;
   width: 100%;
 }
 .art-piece{
-
   width: 22.5%;
   margin-left: 2%;
 
@@ -42,7 +41,7 @@
 
 #art-img{
   width: 100%;
-  height: 210px;
+  height: 235px;
   transition: .55s ease-in-out;
   cursor: grab;
   opacity: 1;
@@ -56,7 +55,7 @@
 }
 #art-img2{
   width: 100%;
-  height: 215px;
+  height: 235px;
   transition: .55s ease-in-out;
   cursor: grab;
   border: 5px solid #ffffff;
