--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -48,6 +48,8 @@
    display: flex;
    padding: 2%;
    justify-content: center;
+   height: 350px;
+   overflow: visible !important;
 }
 .team{
   margin: 1%;
@@ -57,6 +59,8 @@
   margin-top: -3%;
   padding: 2%;
   justify-content: center;
+  height: 350px;
+  overflow: visible !important;
 }
 .artwork{
  margin: 1%;
@@ -66,13 +70,14 @@
   display: flex;
   padding: 2%;
   justify-content: center;
+  overflow: visible !important;
 }
 .project{
   margin: 1%;
 }
 .project-desc{
   position: absolute;
-  margin-top: 2%;
+  margin-top: 1%;
   margin-left: 10%;
   width: 50%;
   text-align: left;
@@ -139,9 +144,13 @@ img#sports-logo:hover ~ span.team-name#warriors{
   transition: .35s ease-in-out;
 }
 #dallas-img{
-  height: 235px;
-  width: 200px;
-  border-radius: 10%;
+  height: 225px;
+  width: 215px;
+  opacity: .65;
+  margin-top: 1%;
+  transition: .35s ease-in-out;
+  cursor: crosshair;
+  border-radius: 2%;
 }
 .project-name{
   color: #e8b923;
@@ -154,6 +163,32 @@ img#sports-logo:hover ~ span.team-name#warriors{
   font-size: 42px;
   text-shadow: 1px 1px 1px black;
 }
+.dallas-appreciation-title{
+  color: #e8b923;
+  text-align: left;
+  text-shadow: ;
+  padding-top: 1%;
+  margin-top: 16%;
+  margin-left: 35%;
+  font-weight: bolder;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 40px;
+  text-shadow: 1px 1px 1px black;
+  position: absolute;
+}
+.team-sect-title{
+  color: #e8b923;
+  text-align: left;
+  text-shadow: ;
+  padding-top: 1%;
+  margin-top: 15.8%;
+  margin-left: 32%;
+  font-weight: bolder;
+  font-family: 'Satisfy', sans-serif;
+  font-size: 40px;
+  text-shadow: 1px 1px 1px black;
+  position: absolute;
+}
 #project-img{
   height: 325px;
   width: 335px;
@@ -164,11 +199,7 @@ img#sports-logo:hover ~ span.team-name#warriors{
 .team-sect-title{
   position: absolute;
 }
-#dallas-img{
-  opacity: .65;
-  transition: .35s ease-in-out;
-  cursor: crosshair;
-}
+
 #dallas-img:hover{
   opacity: 1;
 }
