--- a/src/components/WebDesign/index.css
+++ b/src/components/WebDesign/index.css
@@ -65,6 +65,18 @@
   margin: 10% 0 0 60%;
   background-color: orange;
 }
+.design-2-navbar{
+  display: flex;
+  width: 100%;
+  margin-left: 3%;
+}
+.design-2-navbtn{
+  margin: 5%;
+  font-weight: 600;
+  font-size: 22px;
+  border-left: 3px solid black;
+  padding-left: 1%;
+}
 .design-3{
   height: 850px;
   background-color: whitesmoke;
