navbar styling fixes -- better formatted

--- a/src/components/WebDesign/index.css
+++ b/src/components/WebDesign/index.css
@@ -31,8 +31,9 @@
   font-size: 42px;
 }
 .design-2{
-  height: 850px;
+  height: 950px;
   background-color: orange;
+  border-top: 20px solid orange;
 }
 .design-2-title{
   font-family: 'Permanent Marker', cursive;
@@ -66,19 +67,36 @@
 }
 .the-deal{
   padding: 5%;
-  font-size: 20px;
+  font-size: 24px;
+  font-family: 'Permanent Marker', cursive;
+  opacity: .85;
 }
 .design-2-navbar{
   display: flex;
   width: 100%;
-  margin-left: 3%;
+  background: black;
 }
 .design-2-navbtn{
   margin: 5%;
   font-weight: 600;
   font-size: 22px;
-  border-left: 3px solid black;
+  border-top: 3px solid #fff;
+  border-bottom: 3px solid #fff;
+  border-left: 3px solid transparent;
+  border-right: 3px solid transparent;
   padding-left: 1%;
+  padding-right: 1%;
+  border-radius: 3%;
+  color: #fff;
+  transition: .3s ease-in-out;
+  cursor: pointer;
+  width: 20%;
+  text-align: center;
+}
+.design-2-navbtn:hover{
+  color: orange;
+  border-left: 3px solid orange;
+  border-right: 3px solid orange;
 }
 .design-3{
   height: 850px;
