more styling done to first design in sandbox of webdesign page -- pizzeria;

--- a/src/components/WebDesign/index.css
+++ b/src/components/WebDesign/index.css
@@ -31,9 +31,19 @@
   font-size: 42px;
 }
 .design-2{
-  height: 950px;
+  height: 1050px;
   background-color: orange;
   border-top: 20px solid orange;
+}
+.design-2-headbar{
+  width: 100%;
+  display: flex;
+  margin-left: 80%;
+}
+.design-2-headbtn{
+  margin: 1%;
+  cursor: pointer;
+  font-weight: bolder;
 }
 .design-2-title{
   font-family: 'Permanent Marker', cursive;
@@ -43,6 +53,7 @@
   margin-top : 3%;
   font-size: 80px;
   transform: rotate(-10deg);
+  text-shadow: 5px 5px 1px black;
 }
 .design-2-titleline{
   color: white;
@@ -50,6 +61,7 @@
   border-color: white;
   height: 5px;
   width: 200px;
+  box-shadow: 5px 5px 1px black;
   margin-left: 10%;
 }
 .design-2-header{
@@ -58,10 +70,10 @@
   height: 480px;
 }
 .design-2-deal{
-  height: 225px;
+  height: 205px;
   width: 350px;
   position: absolute;
-  border: 12px double white;
+  border: 12px double black;
   border-radius: 2%;
   margin: 10% 0 0 60%;
   background-color: orange;
@@ -70,7 +82,7 @@
   padding: 5%;
   font-size: 24px;
   font-family: 'Permanent Marker', cursive;
-  opacity: .85;
+  opacity: 1;
   text-align: center;
 }
 .price{
@@ -104,23 +116,47 @@
   border-right: 3px solid orange;
 }
 .design-2-footer{
-  height: 200px;
+  height: 225px;
   border: 2px solid black;
   margin: 2% auto;
   width: 90%;
   display: flex;
 }
 .design-2-coupons{
-  height: 150px;
+  height: 175px;
   border: 2px solid black;
   margin: 2% auto;
   width: 45%;
+  background-image: url('https://images.pexels.com/photos/1023828/pexels-photo-1023828.jpeg');
+  background-size: 100% 100%;
+  cursor: pointer;
+  transition: .35s ease-in-out;
 }
 .design-2-social{
-  height: 150px;
-  border: 2px solid black;
+  height: 175px;
   margin: 2% auto;
   width: 45%;
+  background-image: url('https://images.pexels.com/photos/1596888/pexels-photo-1596888.jpeg');
+  background-size: 100% 100%;
+  cursor: pointer;
+  transition: .35s ease-in-out;
+}
+.design-2-overlay{
+  width: 100%;
+  height: 175px;
+  background-color: black;
+  opacity: .65;
+  transition: .35s ease-in-out;
+}
+.design-2-social:hover .design-2-overlay, .design-2-coupons:hover .design-2-overlay {
+  opacity: 0;
+}
+.design-2-footer-title{
+  color: white;
+  font-size: 50px;
+  font-family: 'Permanent Marker', cursive;
+  position: absolute;
+  margin: 5% 0 0 3%;
 }
 .design-3{
   height: 850px;
