--- a/src/components/WebDesign/index.css
+++ b/src/components/WebDesign/index.css
@@ -166,7 +166,7 @@
   margin: 5% 0 0 3%;
 }
 .design-3{
-  height: 1050px;
+  height: 1450px;
   background-color: whitesmoke;
   border-top: 40px solid black;
 }
@@ -182,6 +182,25 @@
   cursor: pointer;
   width: 20%;
   text-align: center;
+}
+.design-3-sidebar{
+  margin-left: 2%;
+  margin-top: 35%;
+  position: absolute;
+  width: 25%;
+}
+.design-3-sidebtn{
+  margin: 2%;
+  padding-top: 5%;
+  width: 20%;
+  font-size: 20px;
+  font-family: 'Bangers', cursive;
+  transition: .3s ease-in-out;
+  border-bottom: 3px solid transparent;
+  cursor: pointer;
+}
+.design-3-sidebtn:hover{
+  border-bottom: 3px solid black;
 }
 .design-3-title{
   font-family: 'Bangers', cursive;
@@ -213,6 +232,14 @@
 }
 .search-input{
   width: 95%;
+}
+.design-3-mainitems{
+  border: 1px solid black;
+  height: 650px;
+  width: 80%;
+  position: absolute;
+  margin-top: 35%;
+  margin-left: 15%;
 }
 
 
