more mobile adjustments to landing page -- specifically iphones

--- a/src/components/ArtSlab/index.css
+++ b/src/components/ArtSlab/index.css
@@ -20,11 +20,6 @@
   margin: 5% auto;
   width: 100%;
 }
-.gallery-container2{
-  display: flex;
-  margin: 5% auto;
-  width: 100%;
-}
 .art-piece{
   width: 22.5%;
   margin-left: 2%;
@@ -52,16 +47,38 @@
   transform: scale(1.10);
   box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
 }
-#art-img2{
-  width: 100%;
-  height: 235px;
-  transition: .55s ease-in-out;
-  cursor: grab;
-  border: 3px solid #ffffff;
-  opacity: 1;
-}
 
-#art-img2:hover{
-  transform: scale(1.10);
-  box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
+
+@media only screen and (max-width: 600px) {
+
+  .art-section{
+    height: 1050px;
+  }
+  .art-piece{
+    width: 65%;
+    margin: 4% auto;
+    background: #D4af37;
+    box-shadow: 0 14px 28px rgba(0,0,0,0.20), 0 10px 10px rgba(0,0,0,0.20);
+  }
+  .gallery-container{
+    display: block;
+    margin: 5% auto;
+    width: 100%;
+  }
+  #art-img{
+    width: 100%;
+    height: 165px;
+    transition: .55s ease-in-out;
+    cursor: grab;
+    opacity: 1;
+    border: 1px solid whitesmoke;
+  }
+  .title#art{
+    margin-left: 20%;
+    font-size: 60px;
+  }
+  .art-piece#mobile-remove{
+    display: none;
+  }
+
 }
