--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -1,9 +1,9 @@
 
 .body-section{
-  margin-top:4%;
-  height: 400px;
+  margin-top: 2%;
+  height: 450px;
   background: seagreen;
-  clip-path: polygon(30% 0, 100% 10%, 100% 100%, 30% 90%, 0 100%, 0 8%);
+  clip-path: polygon(30% 0, 100% 10%, 100% 100%, 0 100%, 0 100%, 0 8%);
   display: flex;
 }
 .bio-line#first{
@@ -34,7 +34,7 @@
   margin-left: 17%;
   margin-top: 3%;
   transition: .35s ease-in-out;
-  opacity: .85;
+  opacity: 1;
   box-shadow: 0 11px 20px rgba(0,0,0,0.33), 0 10px 10px rgba(0,0,0,0.33);
 }
 .bio-img{
@@ -104,7 +104,7 @@
     margin-left: 3%;
     margin-top: 16%;
     transition: .35s ease-in-out;
-    opacity: .85;
+    opacity: 1;
     box-shadow: 0 11px 20px rgba(0,0,0,0.33), 0 10px 10px rgba(0,0,0,0.33);
   }
   .bio-img{
