--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -14,10 +14,10 @@ canvas{
 #title-letter{
   position: relative;
   cursor: crosshair;
-  color: black;
+  color: white;
   letter-spacing: -0.05em;
   transition: 0.25s ease-in-out;
-  text-shadow: 4px 3px 0px #E4EAE8, 9px 8px 0px rgba(0,0,0,0.15);
+  text-shadow: 4px 2px 0px black, 9px 8px 0px rgba(0,0,0,0.85);
 }
 #title-letter:hover{
   color: seagreen;
@@ -41,7 +41,7 @@ canvas{
   height: 400px;
   width: 100%;
   opacity: .64;
-  background-image: url('https://images.pexels.com/photos/5049/forest-trees-fog-foggy.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');
+  background-image: url('https://images.pexels.com/photos/1562058/pexels-photo-1562058.jpeg');
   clip-path: polygon(50% 0%, 100% 0, 100% 100%, 30% 90%, 0 100%, 0 0);
 }
 .title-box{
@@ -57,10 +57,11 @@ canvas{
   cursor: pointer;
   font-weight: 700;
   text-shadow: 0px 1px 1px transparent;
+  color: white;
 }
 .desc-item#mid{
-  border-right: 1px solid black;
-  border-left: 1px solid black;
+  border-right: 1px solid white;
+  border-left: 1px solid white;
 }
 .desc-item:hover{
   color: seagreen;
