--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -35,7 +35,7 @@ canvas{
   color: seagreen;
 }
 .title-container{
-  background-size: cover;
+  background-size: 100% 100%;
   background-attachment: fixed;
   position: absolute;
   height: 400px;
