--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -44,11 +44,14 @@ a:hover, a:active{
   font-weight: 600;
   border: none;
   padding-left: 1;
+  padding: .5%;
+  border-radius: 10%;
   font-size: 14px;
   width: 7%;
   cursor: pointer;
   transition: .35s ease-in-out;
   border: 1px solid transparent;
+
 }
 #special-char{
   font-size: 18px;
@@ -80,7 +83,20 @@ a:hover, a:active{
 .ql-btn:hover{
   opacity: 1;
   color: #ffbf00;
+  transform: scale(1.05);
 }
+
+.close-btn{
+  background: white !important;
+  border: none;
+  margin-left: 92%;
+  color: #aaa;
+  transition: .3s ease-in-out;
+}
+.close-btn:hover{
+  color: black;
+}
+
 .bet{
   display: none;
   position: fixed;
