--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -45,12 +45,13 @@ a:hover, a:active{
   border: none;
   padding-left: 1;
   padding: .5%;
-  border-radius: 10%;
+  border-radius: 2%;
   font-size: 14px;
   width: 7%;
   cursor: pointer;
   transition: .35s ease-in-out;
-  border: 1px solid transparent;
+  border-left: 1px solid transparent;
+  border-right: 1px solid transparent;
 
 }
 #special-char{
@@ -60,7 +61,8 @@ a:hover, a:active{
 }
 .nav-btn:hover{
   color: #ffffff;
-  border: 1px solid seagreen;
+  border-left: 1px solid seagreen;
+  border-right: 1px solid seagreen;
 }
 .quicklinks{
   position: absolute;
@@ -92,6 +94,7 @@ a:hover, a:active{
   margin-left: 92%;
   color: #aaa;
   transition: .3s ease-in-out;
+  font-weight: bolder;
 }
 .close-btn:hover{
   color: black;
@@ -103,17 +106,18 @@ a:hover, a:active{
   margin: 6.2% 0 0 64%;
   z-index: 5;
   height: 375px;
-  width: 475px;
+  width: 425px;
   background: white;
   opacity: .9;
   overflow-y: scroll;
   box-shadow: 2px 15px 25px black;
   cursor: grab;
+  padding: 1%;
 }
 #bet-text{
   text-align: left;
   position: absolute;
-  margin: 8%;
+  margin: 1% 0 0 6%;
 }
 #bet-text-divider{
   color: seagreen;
@@ -141,6 +145,7 @@ a:hover, a:active{
   overflow-y: scroll;
   box-shadow: 2px 15px 25px black;
   cursor: grab;
+
 }
 #quote-text{
   text-align: left;
