--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -29,7 +29,8 @@ a:hover, a:active{
   position: absolute;
 }
 .nav-logo{
-  width: 10%;
+  width: 8%;
+  margin-left: 2%;
 }
 .nav-img{
   width: 100%;
