react-twitter-embedd added in as well as new bet and new quote of the day and new home button logo

--- a/src/components/CentralHeader/index.css
+++ b/src/components/CentralHeader/index.css
@@ -64,7 +64,7 @@ canvas{
   border-left: 1px solid white;
 }
 .desc-item:hover{
-  color: seagreen;
+  color: white;
   text-shadow: 0px 1px 1px rgb(0,0,0);
 
 }
