--- a/src/components/CentralCarousel/index.css
+++ b/src/components/CentralCarousel/index.css
@@ -1,37 +1,33 @@
 .carousel-section{
   background: whitesmoke;
-  height: 650px;
+  height:450px;
   width: 100%;
   margin-top: 0%;
-  display: none;
+
 }
 .title#highlights{
+  position: absolute;
   color: seagreen;
   text-align: left;
   padding-top: 6%;
   margin-left: 20%;
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 68px;
   text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 .carousel-container{
   background: whitesmoke !important;
   opacity: 1 !important;
-  margin-top: -3%;
   overflow: visible !important;
 
 }
 .carousel-indicators{
-  position: absolute !important;
-  margin: -32% auto !important;
-  color: seagreen !important;
-  width: 100%;
+
 }
 .carousel-inner{
   font-size: 20px;
   text-align: center;
-  margin: 8% auto;
   position: absolute;
 
 }
@@ -42,7 +38,10 @@
   height: .2px;
  }
  .carousel-control-next, .carousel-control-prev{
-   display: none;
+   background: seagreen;
+   height: 40px;
+   width: 10%;
+   margin-top: 28%;
  }
  .team-container{
    display: flex;
@@ -56,7 +55,6 @@
 }
 .art-container{
   display: flex;
-  margin-top: -3%;
   padding: 2%;
   justify-content: center;
   height: 350px;
@@ -66,7 +64,6 @@
  margin: 1%;
 }
 .project-container{
-  margin-top: -3%;
   display: flex;
   padding: 2%;
   justify-content: center;
@@ -134,14 +131,15 @@ img#sports-logo:hover ~ span.team-name#warriors{
   display: none;
   position: absolute;
   border-radius: 2%;
-  border: 1px solid seagreen;
+  border: 2px solid seagreen;
   z-index: 101;
-  height: 175px;
+  height: 125px;
   opacity: .9;
   width: 35%;
   color: seagreen;
+  background: black;
   padding: 3%;
-  margin: 5% 0 0 57%;
+  margin: 21.5% 0 0 35%;
   transition: .35s ease-in-out;
 }
 #dallas-img{
@@ -160,7 +158,7 @@ img#sports-logo:hover ~ span.team-name#warriors{
   padding-top: 1%;
   margin-left: 20%;
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 42px;
   text-shadow: 1px 1px 1px black;
 }
@@ -169,10 +167,10 @@ img#sports-logo:hover ~ span.team-name#warriors{
   text-align: left;
   text-shadow: ;
   padding-top: 1%;
-  margin-top: 16%;
+  margin-top: 19%;
   margin-left: 35%;
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 40px;
   text-shadow: 1px 1px 1px black;
   position: absolute;
@@ -185,7 +183,7 @@ img#sports-logo:hover ~ span.team-name#warriors{
   margin-top: 15.8%;
   margin-left: 32%;
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-size: 40px;
   text-shadow: 1px 1px 1px black;
   position: absolute;
@@ -193,7 +191,7 @@ img#sports-logo:hover ~ span.team-name#warriors{
 #project-img{
   height: 325px;
   width: 335px;
-  border-radius: 2%;
+  border-radius: 0%;
   margin-left: 60%;
   margin-top: -3.1%;
 }
