--- a/src/components/SportsSlab/index.css
+++ b/src/components/SportsSlab/index.css
@@ -7,10 +7,11 @@
 .title#sports{
   color: seagreen;
   padding-top: 1%;
-  margin-left: 20%;
+  margin-left: 30%;
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
-  font-size: 68px;
+  font-family: 'Bowlby One SC', cursive;
+  letter-spacing: .05em;
+  font-size: 69px;
   text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
 }
 
