--- a/src/components/WebDevSlab/index.css
+++ b/src/components/WebDevSlab/index.css
@@ -8,8 +8,9 @@
   padding-top: 2%;
 
   font-weight: bolder;
-  font-family: 'Satisfy', sans-serif;
-  font-size: 68px;
+  font-family: 'Bowlby One SC', cursive;
+  letter-spacing: .05em;
+  font-size: 62px;
   text-shadow: 4px 3px 0px black, 9px 8px 0px rgba(255,255,255,0.25);
 
 }
@@ -60,7 +61,7 @@
   transition: .45s ease-in-out;
 }
 .dev-design-line#first{
-  width: 22%;
+  width: 10%;
   margin-top: 4%;
 }
 .dev-design-line#second{
@@ -69,7 +70,7 @@
 }
 
 .dev-section:hover .dev-design-line#first{
-  width: 30%;
+  width: 20%;
 }
 .dev-section:hover .dev-design-line#second{
   width: 100%;
