cleaned up fixed minor annoyances with top nav btns -- text decorations and sizing of border on hover

--- a/src/components/TopNavbar/index.css
+++ b/src/components/TopNavbar/index.css
@@ -29,12 +29,13 @@ a:hover, a:active{
   position: absolute;
 }
 .nav-logo{
-  width: 7%;
-  margin-left: 2%;
+  width: 5%;
+  margin-left: 3%;
+  margin-top: .5%;
 }
 .nav-img{
   width: 100%;
-  height: 80px;
+  height: 60px;
 }
 .top-nav{
   display: flex;
@@ -45,14 +46,18 @@ a:hover, a:active{
   font-weight: 600;
   border: none;
   padding-left: 1;
-  padding: .5%;
+  padding: 1%;
   border-radius: 2%;
   font-size: 14px;
-  width: 7%;
   cursor: pointer;
   transition: .35s ease-in-out;
   border: 1px solid transparent;
+  justify-content: center
 }
+a:hover{
+  text-decoration: none;
+}
+
 #special-char{
   font-size: 18px;
   font-weight: 800;
